--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -2,19 +2,49 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="lib/css/styles.css">
-    <title>{{ title }}</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>{{ pageTitle }}</title>
 </head>
-
 <body>
-
 <nav class="navbar sticky-top navbar-light bg-light">
-    <img src="https://hhla.de/typo3conf/ext/px_theme_hhla/Resources/Public/img/hhla_logo_claim.svg" width="175" height="30" alt="">
+    <a href="http://hhlacleaner.de"><img src="https://hhla.de/typo3conf/ext/px_theme_hhla/Resources/Public/img/hhla_logo_claim.svg" width="175" height="30" alt=""></a>
+    {% block navEntrys %}
+
+    {% endblock %}
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mx-auto d-block d-none d-sm-block mt-3">
+        <h{{ headingSize }}>{{ pageHeading }}</h{{ headingSize }}>
+            {% block body %}
+                <form action="chooseTrailer.php" method="post" class="mt-3">
+                    <div class="form-group">
+                        <label for="input.Usermail">{{ transMail }}</label>
+                        <input required type="email" class="form-control" id="input.Usermail" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="input.Password">{{ transPassword }}</label>
+                        <input required type="password" class="form-control" id="input.Password" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="form-control btn-success" id="input.Password" value="Submit">
+                    </div>
+                    <div class="text-right">
+                        <a href="#"><small>{{ transRequestLogin }}</small></a>
+                    </div>
+                </form>
+                <div>
+                    <a href="#"><small>{{ transGuest }}</small></a>
+                </div>
+            {% endblock %}
+            {% block footer %}
 
-</body>
-
+            {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+{% block script %}
+{% endblock %}
+</body>
 </html>
