Frontend Update V.0.0.2: - Added Formhandler

--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div>
-        <form action="generateCleaningForm.php" method="post" id="selectTrailertype" name="selectTrailertype" class="form-control mt-3">
+        <form action="generateCleaningForm.php?create" method="post" id="selectTrailertype" name="selectTrailertype" class="form-control mt-3">
             Trailertype
             <div class="form-group">
                 <div class="form-check">
