--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="row mx-auto">
-            {% for amountChambermodals %}
+            {% for amountChambermodals in range(1, amountChambermodals) %}
                 <a class="btn btn-success">hallo</a>
             {% endfor %}
         </div>
