--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -3,8 +3,8 @@
 {% block body %}
     <div class="container">
         <div class="row mx-auto">
-            {% for amountChambermodals in range(1, amountChambermodals) %}
-                <a class="btn btn-success">hallo</a>
+            {% for i in range(1, amountChambermodals) %}
+                <a class="btn btn-success">{{ i }}</a>
             {% endfor %}
         </div>
     </div>
