--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -1,9 +1,11 @@
 {% extends "baseHTML.twig" %}
 
 {% block body %}
+
     <div class="container">
         <div class="row mx-auto">
-            {% for i in range(1, amountChambermodals) %}
+            <a></a>
+            {% for i in range(amountChambermodals, 1) %}
                 <a class="btn btn-success">{{ i }}</a>
             {% endfor %}
         </div>
@@ -14,60 +16,3 @@
 
 {% endblock %}
 
-{% block script %}
-    <script>
-        $('#selectTrailertype input').on('change', function() {
-            console.log(this.value);
-            switch(this.value){
-
-                case "20":
-                    $("#Chamber6").hide();
-                    $("#LabelChamber6").hide();
-                    $("#Chamber5").hide();
-                    $("#LabelChamber5").hide();
-                    $("#Chamber4").hide();
-                    $("#LabelChamber4").hide();
-                    $("#Chamber3").show();
-                    $("#Chamber2").show();
-                    $("#Chamber1").show();
-                    $("#NumberPlate").show();
-                    $("#LabelNumberPlate").show();
-                    $("#Tanknumber").hide();
-                    $("#LabelTanknumber").hide();
-                    break;
-
-                case "20+20":
-                    $("#Chamber6").show();
-                    $("#LabelChamber6").show();
-                    $("#Chamber5").show();
-                    $("#LabelChamber5").show();
-                    $("#Chamber4").show();
-                    $("#LabelChamber4").show();
-                    $("#Chamber3").show();
-                    $("#Chamber2").show();
-                    $("#Chamber1").show();
-                    $("#NumberPlate").hide();
-                    $("#LabelNumberPlate").hide();
-                    $("#Tanknumber").show();
-                    $("#LabelTanknumber").show();
-                    break;
-
-                case "40":
-                    $("#Chamber6").hide();
-                    $("#LabelChamber6").hide();
-                    $("#Chamber5").show();
-                    $("#LabelChamber5").show();
-                    $("#Chamber4").show();
-                    $("#LabelChamber4").show();
-                    $("#Chamber3").show();
-                    $("#Chamber2").show();
-                    $("#Chamber1").show();
-                    $("#NumberPlate").show();
-                    $("#LabelNumberPlate").show();
-                    $("#Tanknumber").hide();
-                    $("#LabelTanknumber").hide();
-                    break;
-            }
-        })
-    </script>
-{% endblock %}
