--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -7,19 +7,19 @@
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="20" id="Ttype20">
-                    <label class="form-check-lable" for="Ttype20"><img src="lib/img/20.png"><em>20</em></label>
+                    <label class="form-check-lable" for="Ttype20"><img src="lib/img/truck_20.svg"><em>20</em></label>
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="20+20" id="Ttype20+20">
-                    <label class="form-check-lable" for="Ttype20+20"><img src="lib/img/20+20.png"><em>20 + 20</em></label>
+                    <label class="form-check-lable" for="Ttype20+20"><img src="lib/img/truck_20_20.svg"><em>20 + 20</em></label>
                 </div>
             </div>
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="40" id="Ttype40">
-                    <label class="form-check-lable" for="Ttype40"><img src="lib/img/40.png"><em>40</em></label>
+                    <label class="form-check-lable" for="Ttype40"><img src="lib/img/truck_40.svg"><em>40</em></label>
                 </div>
             </div>
 
