--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav class="navbar sticky-top navbar-light bg-light">
-    <a href="http://hhlacleaner.de"><img src="https://hhla.de/typo3conf/ext/px_theme_hhla/Resources/Public/img/hhla_logo_claim.svg" width="175" height="30" alt=""></a>
+    <a href="http://hhlacleaner.de"><img src="https://upload.wikimedia.org/wikipedia/de/thumb/b/b5/Hhla-logo.svg/1064px-Hhla-logo.svg.png" width="110" height="30" alt=""></a>
     {% block navEntrys %}
 
     {% endblock %}
