Frontend Update V.0.0.2: ->BUG with MODAL

--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -4,6 +4,18 @@
     color: #ffffff !important;
 }
 
+.btn-select{
+    background-color: #002369 !important;
+    border-color: #002369 !important;
+    color: #ffffff !important;
+    border-radius: 0!important;
+}
+
+img:hover{
+    filter: none !important;
+
+}
+
 .btn-success:hover{
     background-color: #002369 !important;
     border-color: #002369 !important;
