--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -3,10 +3,11 @@
 {% block body %}
 
     <div class="container">
-        <div class="row mx-auto">
-            {% for i in range(amountChambermodals, 1) %}
-                <a class="btn btn-success" data-toggle="modal" data-target="#Modal{{ i }}">{{ i }}</a>
-                <form class="modal multi-step" id="demo-modal-1">
+        <div class="row mt-3">
+            {% for i in range(1, amountChambermodals) %}
+                <a class="btn btn-md btn-select mr-1" data-toggle="modal" data-target="#Modal{{ i }}">{{ i }}</a>
+
+                <form class="modal multi-step" id="Modal{{ i }}">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -43,24 +44,19 @@
                                             <input class="form-check-input" type="radio" name="surface" id="surface2" value="smooth">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="submit" class="form-control btn-success" value="next">
-                                    </div>
-                                </form>
-
                             </div>
                             <div class="modal-body step step-2">
                                 This is the final step
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary step step-1" data-step="1" onclick="sendEvent('#demo-modal-1', 2)">Continue</button>
+                                <button type="button" class="btn btn-primary step step-1" data-step="1" onclick="sendEvent('#Modal{{ i }}', 2)">Continue</button>
                             </div>
                         </div>
                     </div>
                 </form>
             {% endfor %}
-            <img src="/#">
+            <img width="28px" src="lib/img/truck_front.svg">
         </div>
     </div>
 {% endblock %}
@@ -69,9 +65,12 @@
 
 {% endblock %}
 
-<script src="multi-step-modal.js"></script>
-<script>
-    sendEvent = function(sel, step) {
-        $(sel).trigger('next.m.' + step);
-    }
-</script>
+{% block script %}
+    <script src="lib/js/multi-step-modal.js"></script>
+    <script>
+        sendEvent = function(sel, step) {
+            $(sel).trigger('next.m.' + step);
+        }
+    </script>
+{% endblock %}
+
