Updated CSS File, changed color of button_select.

--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -28,7 +28,7 @@ img:hover{
 
 .btn-success:active {
     box-shadow: none;
-    background-color: #BE0038 !important;
+    background-color: #002369 !important;
 }
 
 .sticky-bottom {
