--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -17,7 +17,7 @@
         <div class="col-md-4 mx-auto d-block d-none d-sm-block mt-3">
         <h{{ headingSize }}>{{ pageHeading }}</h{{ headingSize }}>
             {% block body %}
-                <form action="chooseTrailer.php" method="post" class="mt-3">
+                <form action="chooseBegleitet.php" method="post" class="mt-3">
                     <div class="form-group">
                         <label for="input.Usermail">{{ transMail }}</label>
                         <input required type="email" class="form-control" id="input.Usermail" placeholder="Email">
