--- a/frontend/lib/templates/chooseBegleitet.twig
+++ b/frontend/lib/templates/chooseBegleitet.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-    <div class="row">
-    <input type="submit" class="form-control btn-success mt-5" id="input.Password" value="supervise">
-    <input type="submit" class="form-control btn-success mt-2" id="input.Password" value="not supervise">
+    <div class="row col-md-4 mx-auto d-block d-none d-sm-block mt-3">
+        <a href="chooseTrailer.php?supervise" class="form-control btn-success mt-5">supervise</a>
+        <a href="chooseTrailer.php" class="form-control btn-success mt-2">not supervise</a>
     </div>
 
 {% endblock %}
