Updated CSS File, changed color of button_select.

--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -29,6 +29,7 @@ img:hover{
 .btn-success:active {
     box-shadow: none;
     background-color: #002369 !important;
+    text-decoration: none;
 }
 
 .sticky-bottom {
