--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -1,76 +1,32 @@
 {% extends "baseHTML.twig" %}
 
 {% block body %}
-
     <div class="container">
         <div class="row mt-3">
+            <div class="panel-group" id="accordion">
             {% for i in range(1, amountChambermodals) %}
-                <a class="btn btn-md btn-select mr-1" data-toggle="modal" data-target="#Modal{{ i }}">{{ i }}</a>
-
-                <form class="modal multi-step" id="Modal{{ i }}">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title step-1" data-step="1">{{ transSpecifications }}</h4>
-                                <h4 class="modal-title step-2" data-step="2">{{ transSpecifications }}</h4>
-                            </div>
-                            <div class="modal-body step step-1">
-                                <form class="form-control">
-                                    <div class="form-group">
-                                        <label>{{ transCoveramount }}</label>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="amountConver" id="cover1" value="1">
-                                        </div>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="amountConver" id="cover1" value="2">
-                                        </div>
-
-                                    </div>
-                                    <div class="form-group">
-                                        <label>{{ transWalltype }}</label>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="walltype" id="walltype1" value="even">
-                                        </div>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="walltype" id="walltype2" value="curved">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>{{ transSurface }}</label>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="surface" id="surface1" value="rough">
-                                        </div>
-                                        <div class="col-6">
-                                            <input class="form-check-input" type="radio" name="surface" id="surface2" value="smooth">
-                                        </div>
-                                    </div>
-                            </div>
-                            <div class="modal-body step step-2">
-                                This is the final step
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary step step-1" data-step="1" onclick="sendEvent('#Modal{{ i }}', 2)">Continue</button>
-                            </div>
+                <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ i }}">
+                                    Kammer {{ i }}</a>
+                            </h4>
+                        </div>
+                        <div id="collapse{{ i }}" class="panel-collapse collapse in">
+                            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat.</div>
                         </div>
                     </div>
-                </form>
             {% endfor %}
-            <img width="28px" src="lib/img/truck_front.svg">
+            </div>
         </div>
     </div>
 {% endblock %}
 
-{% block footer %}
 
-{% endblock %}
 
-{% block script %}
-    <script src="lib/js/multi-step-modal.js"></script>
-    <script>
-        sendEvent = function(sel, step) {
-            $(sel).trigger('next.m.' + step);
-        }
-    </script>
-{% endblock %}
+
+
 
