--- a/frontend/lib/templates/chooseBegleitet.twig
+++ b/frontend/lib/templates/chooseBegleitet.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="mx-auto mt-3 text-center">
+    <div class="col-md-12 mx-auto mt-3 text-center">
         <a href="chooseTrailer.php?supervise" class="form-control btn-success mt-5">supervise</a>
         <a href="chooseTrailer.php" class="form-control btn-success mt-2">not supervise</a>
     </div>
