--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -2,10 +2,12 @@
 
 {% block body %}
     <div class="container">
-        <div class="row mt-3">
+        <div class="row col-md-12 mt-3">
             <div class="panel-group" id="accordion">
+                <form method="post" action="jsonEncode.php">
             {% for i in range(1, amountChambermodals) %}
-                <div class="panel panel-default">
+                <div class="card">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ i }}">
@@ -13,13 +15,55 @@
                             </h4>
                         </div>
                         <div id="collapse{{ i }}" class="panel-collapse collapse in">
-                            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat.</div>
+                            <div class="panel-body">
+                                <label>{{ transCoveramount }}</label>
+                                <div aria-expanded="true" class="btn-group" role="group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountOneCover.Chamber{{ i }}" value="1">
+                                        <label class="btn btn-success" id="amountChamber1Label" for="amountChamber1">1</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountTwoCover.Chamber{{ i }}" value="2">
+                                        <label class="btn btn-success" id="amountChamber2Label" for="amountChamber2">2</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountThreeCover.Chamber{{ i }}" value="3">
+                                        <label class="btn btn-success" id="amountChamber3Label" for="amountChamber3">3</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountFourCover.Chamber{{ i }}" value="4">
+                                        <label class="btn btn-success" id="amountChamber4Label" for="amountChamber4">4</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountFiveCover.Chamber{{ i }}" value="5">
+                                        <label class="btn btn-success" id="amountChamber5Label" for="amountChamber5">5</label>
+                                    </div>
+                                </div>
+
+                                <label>{{ transWalltype }}</label><br>
+
+                                <div class="btn-group" role="group">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="roughWall.Chamber{{ i }}" value="rough">
+                                    <label id="amountChamber4Label" for="typeWall"><img width="40px" src="lib/img/wand_rau_2.svg"><em>&nbsp;Rough</em></label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="smmothWall.Chamber{{ i }}" value="smooth">
+                                    <label id="amountChamber5Label" for="amountChamber5"><img width="40px" src="lib/img/wand_glatt.svg"><em>&nbsp;Smooth</em></label>
+                                </div>
+                                </div>
+
+                                <label>{{ transLastDischarge }}</label>
+                                <div class="form-group">
+                                    <input class="form-control" type="date">
+                                </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
             {% endfor %}
+                <input type="submit" class="sticky-bottom btn btn-select" value="submit">
+                </form>
             </div>
         </div>
     </div>
