--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -20,23 +20,23 @@
                                 <div aria-expanded="true" class="btn-group" role="group">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountOneCover.Chamber{{ i }}" value="1">
-                                        <label class="btn btn-success" id="amountChamber1Label" for="amountChamber1">1</label>
+                                        <label class="btn btn-success" id="amountChamber1Label" for="amountOneCover.Chamber{{ i }}">1</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountTwoCover.Chamber{{ i }}" value="2">
-                                        <label class="btn btn-success" id="amountChamber2Label" for="amountChamber2">2</label>
+                                        <label class="btn btn-success" id="amountChamber2Label" for="amountTwoCover.Chamber{{ i }}">2</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountThreeCover.Chamber{{ i }}" value="3">
-                                        <label class="btn btn-success" id="amountChamber3Label" for="amountChamber3">3</label>
+                                        <label class="btn btn-success" id="amountChamber3Label" for="amountThreeCover.Chamber{{ i }}">3</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountFourCover.Chamber{{ i }}" value="4">
-                                        <label class="btn btn-success" id="amountChamber4Label" for="amountChamber4">4</label>
+                                        <label class="btn btn-success" id="amountChamber4Label" for="amountFourCover.Chamber{{ i }}">4</label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountFiveCover.Chamber{{ i }}" value="5">
-                                        <label class="btn btn-success" id="amountChamber5Label" for="amountChamber5">5</label>
+                                        <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id   ="amountFiveCover.Chamber{{ i }}" value="5">
+                                        <label class="btn btn-success" id="amountChamber5Label" for="amountFiveCover.Chamber{{ i }}">5</label>
                                     </div>
                                 </div>
 
@@ -45,11 +45,11 @@
                                 <div class="btn-group" role="group">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="roughWall.Chamber{{ i }}" value="rough">
-                                    <label id="amountChamber4Label" for="typeWall"><img width="40px" src="lib/img/wand_rau_2.svg"><em>&nbsp;Rough</em></label>
+                                    <label id="amountChamber6Label" for="typeWall"><img width="40px" src="lib/img/wand_rau_2.svg"><em>&nbsp;Rough</em></label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="smmothWall.Chamber{{ i }}" value="smooth">
-                                    <label id="amountChamber5Label" for="amountChamber5"><img width="40px" src="lib/img/wand_glatt.svg"><em>&nbsp;Smooth</em></label>
+                                    <label id="amountChamber7Label" for="amountChamber"><img width="40px" src="lib/img/wand_glatt.svg"><em>&nbsp;Smooth</em></label>
                                 </div>
                                 </div>
 
