--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -37,7 +37,7 @@
                     </div>
                 </form>
                 <div>
-                    <a href="#"><small>{{ transGuest }}</small></a>
+                    <a href="chooseBegleitet.php?guest"><small>{{ transGuest }}</small></a>
                 </div>
             {% endblock %}
             {% block footer %}
