--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -44,8 +44,7 @@ img:hover{
 
 .form-check-input{
     color: white;
-
-
+    visibility: hidden;
 }
 
 .form-check-input:active{
@@ -59,4 +58,8 @@ img:hover{
 
 label:active{
     filter: drop-shadow(2px);
+}
+
+label{
+    font-size: large;
 }
