--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -4,7 +4,6 @@
 <div class="text-center">
  <form action="generateCleaningForm.php?create" method="post" id="selectTrailertype" name="selectTrailertype" class="form mt-3">
      <div id="section1">
-            Trailertype
             <div class="form-group mt-5">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="20" id="Ttype20">
@@ -27,7 +26,8 @@
         </div>
      <div id="section2" class="mx-auto text-center" style="display: none">
      <div class="form-group">
-         Chambers
+         <label>Total number of chambers</label>
+         <br />
          <div class="btn-group" role="group" aria-label="Basic example">
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber1" value="1">
@@ -55,7 +55,7 @@
              </div>
          </div>
          <div class="form-group">
-             <label class="form-check-label" id="LabelNumberPlate" for="NumberPlate">Numberplate</label>
+             <label class="form-check-label" id="LabelNumberPlate" for="NumberPlate">Number plate</label>
              <input class="form-control" type="text" name="NumberPlate" id="NumberPlate" placeholder="Numberplate">
          </div>
          <div class="form-group">
