--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -48,8 +48,9 @@ img:hover{
 
 }
 
-.form-check-input:active{
-    visibility: visible;
+.form-check{
+    border-color: #ffffff;
+    text-decoration: none;
 
 }
 
