--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -30,7 +30,7 @@
                         <input required type="password" class="form-control" id="input.Password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="form-control btn-success" id="input.Password" value="Submit">
+                        <input type="submit" class="btn-select form-control btn-success" id="input.Password" value="Submit">
                     </div>
                     <div class="text-right">
                         <a href="#"><small>{{ transRequestLogin }}</small></a>
