--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -54,11 +54,11 @@
                  <label class="btn btn-success" id="LabelChamber6" for="Chamber6">6</label>
              </div>
          </div>
-         <div class="form-group">
+         <div class="form-group mt-4">
              <label class="form-check-label" id="LabelNumberPlate" for="NumberPlate">Number plate</label>
              <input class="form-control" type="text" name="NumberPlate" id="NumberPlate" placeholder="Numberplate">
          </div>
-         <div class="form-group">
+         <div class="form-group mt-4">
              <label class="form-check-label" id="LabelTanknumber" for="Tanknumber">Tanknumber</label>
              <input class="form-control" type="text" name="Tanknumber" id="Tanknumber" placeholder="XXXU1234567">
          </div>
