--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -11,7 +11,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ i }}">
-                                    Kammer {{ i }}</a>
+                                    Chamber {{ i }}</a>
                             </h4>
                         </div>
                         <div id="collapse{{ i }}" class="panel-collapse collapse in">
@@ -51,6 +51,19 @@
                                     <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="smmothWall.Chamber{{ i }}" value="smooth">
                                     <label id="amountChamber7Label" for="amountChamber"><img width="40px" src="lib/img/wand_glatt.svg"><em>&nbsp;Smooth</em></label>
                                 </div>
+                                </div>
+
+                                <label>{{ transWalls }}</label><br>
+
+                                <div class="btn-group" role="group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="typeWalls.Chamber{{ i }}" id="evenWall.Chamber{{ i }}" value="even">
+                                        <label id="amountChamber8Label" for="typeWalls"><img width="40px" src="lib/img/wand_gerade.svg"><em>&nbsp;Even</em></label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="typeWalls.Chamber{{ i }}" id="curvedWall.Chamber{{ i }}" value="curved">
+                                        <label id="amountChamber9Label" for="typeWalls"><img width="40px" src="lib/img/wand_gebogen.svg"><em>&nbsp;Curved</em></label>
+                                    </div>
                                 </div>
 
                                 <label>{{ transLastDischarge }}</label>
