--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -42,32 +42,32 @@
 
                                 <label>{{ transWalltype }}</label><br>
 
-                                <div class="btn-group" role="group">
-                                <div class="form-check">
+                                <div class="btn-group row col-md-12" role="group">
+                                <div class="form-check col-6 mx-auto">
                                     <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="roughWall.Chamber{{ i }}" value="rough">
-                                    <label id="amountChamber6Label" for="typeWall"><img width="40px" src="lib/img/wand_rau_2.svg"><em>&nbsp;Rough</em></label>
+                                    <label id="amountChamber6Label" for="roughWall.Chamber{{ i }}"><img width="40px" src="lib/img/wand_rau_2.svg"></label>
                                 </div>
-                                <div class="form-check">
+                                <div class="form-check col-6 mx-auto">
                                     <input class="form-check-input" type="radio" name="typeWall.Chamber{{ i }}" id="smmothWall.Chamber{{ i }}" value="smooth">
-                                    <label id="amountChamber7Label" for="amountChamber"><img width="40px" src="lib/img/wand_glatt.svg"><em>&nbsp;Smooth</em></label>
+                                    <label id="amountChamber7Label" for="smmothWall.Chamber{{ i }}"><img width="40px" src="lib/img/wand_glatt.svg"></label>
                                 </div>
                                 </div>
 
                                 <label>{{ transWalls }}</label><br>
 
-                                <div class="btn-group" role="group">
-                                    <div class="form-check">
+                                <div class="btn-group row col-md-12" role="group">
+                                    <div class="form-check col-6 mx-auto">
                                         <input class="form-check-input" type="radio" name="typeWalls.Chamber{{ i }}" id="evenWall.Chamber{{ i }}" value="even">
-                                        <label id="amountChamber8Label" for="typeWalls"><img width="40px" src="lib/img/wand_gerade.svg"><em>&nbsp;Even</em></label>
+                                        <label id="amountChamber8Label" for="evenWall.Chamber{{ i }}"><img width="40px" src="lib/img/wand_gerade.svg"></label>
                                     </div>
-                                    <div class="form-check">
+                                    <div class="form-check col-6 mx-auto">
                                         <input class="form-check-input" type="radio" name="typeWalls.Chamber{{ i }}" id="curvedWall.Chamber{{ i }}" value="curved">
-                                        <label id="amountChamber9Label" for="typeWalls"><img width="40px" src="lib/img/wand_gebogen.svg"><em>&nbsp;Curved</em></label>
+                                        <label id="amountChamber9Label"><img width="40px" src="lib/img/wand_gebogen.svg"></label>
                                     </div>
                                 </div>
 
                                 <label>{{ transLastDischarge }}</label>
-                                <div class="form-group">
+                                <div class="mt-3 form-group">
                                     <input class="form-control" type="date">
                                 </div>
                                 </div>
@@ -80,6 +80,14 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block script %}
+<script>
+jQuery('a').click( function(e) {
+jQuery('.collapse').collapse('hide');
+});
+</script>
 {% endblock %}
 
 
