--- a/frontend/lib/templates/uploadImage.twig
+++ b/frontend/lib/templates/uploadImage.twig
@@ -1,11 +1,22 @@
 {% extends "baseHTML.twig" %}
 
 {% block body %}
-    <div class="custom-file mt-3">
-        <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-        <label class="custom-file-label" for="validatedCustomFile">Choose waybill</label>
-        <div class="invalid-feedback">Invalid file</div>
-    </div>
-    <input type="submit" class="float-right btn btn-block btn-select" value="submit">
+    <form action="dashboard.php">
+
+        <label>Upload your waybill</label>
+        <div class="form-group custom-file">
+            <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+            <label class="custom-file-label" for="validatedCustomFile">Choose waybill</label>
+            <div class="invalid-feedback mb-3">Invalid file</div>
+        </div>
+
+        <div class="form-group">
+        <label class="mt-1">ETA</label>
+            <input placeholder="ETA - Day" class="form-control input-group" type="date" value="ETA - Day">
+            <input placeholder="ETA - Time" class="form-control input-group" type="time" value="ETA - Time">
+        </div>
+        <input type="submit" class="float-right btn btn-block btn-select" value="submit">
+
+    </form>
 {% endblock %}
 
