--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -31,27 +31,27 @@
          <div class="btn-group" role="group" aria-label="Basic example">
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber1" value="1">
-                 <label class="btn btn-success" for="Chamber1">1</label>
+                 <label class="btn btn-success lol" for="Chamber1">1</label>
              </div>
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber2" value="2">
-                 <label class="btn btn-success" for="Chamber2">2</label>
+                 <label class="btn btn-success lol" for="Chamber2">2</label>
              </div>
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber3" value="3">
-                 <label class="btn btn-success" for="Chamber3">3</label>
+                 <label class="btn btn-success lol" for="Chamber3">3</label>
              </div>
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber4" value="4">
-                 <label class="btn btn-success" id="LabelChamber4" for="Chamber4">4</label>
+                 <label class="btn btn-success lol" id="LabelChamber4" for="Chamber4">4</label>
              </div>
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber5" value="5">
-                 <label class="btn btn-success" id="LabelChamber5" for="Chamber5">5</label>
+                 <label class="btn btn-success lol" id="LabelChamber5" for="Chamber5">5</label>
              </div>
              <div class="form-check">
                  <input class="form-check-input" type="radio" name="amountChamber" id="Chamber6" value="6">
-                 <label class="btn btn-success" id="LabelChamber6" for="Chamber6">6</label>
+                 <label class="btn btn-success lol" id="LabelChamber6" for="Chamber6">6</label>
              </div>
          </div>
          <div class="form-group mt-4">
