--- a/frontend/lib/templates/createForm.twig
+++ b/frontend/lib/templates/createForm.twig
@@ -20,23 +20,23 @@
                                 <div aria-expanded="true" class="btn-group" role="group">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountOneCover.Chamber{{ i }}" value="1">
-                                        <label class="btn btn-success" id="amountChamber1Label" for="amountOneCover.Chamber{{ i }}">1</label>
+                                        <label class="btn btn-success lol" id="amountChamber1Label" for="amountOneCover.Chamber{{ i }}">1</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountTwoCover.Chamber{{ i }}" value="2">
-                                        <label class="btn btn-success" id="amountChamber2Label" for="amountTwoCover.Chamber{{ i }}">2</label>
+                                        <label class="btn btn-success lol" id="amountChamber2Label" for="amountTwoCover.Chamber{{ i }}">2</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountThreeCover.Chamber{{ i }}" value="3">
-                                        <label class="btn btn-success" id="amountChamber3Label" for="amountThreeCover.Chamber{{ i }}">3</label>
+                                        <label class="btn btn-success lol" id="amountChamber3Label" for="amountThreeCover.Chamber{{ i }}">3</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id="amountFourCover.Chamber{{ i }}" value="4">
-                                        <label class="btn btn-success" id="amountChamber4Label" for="amountFourCover.Chamber{{ i }}">4</label>
+                                        <label class="btn btn-success lol" id="amountChamber4Label" for="amountFourCover.Chamber{{ i }}">4</label>
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="amountCover.Chamber{{ i }}" id   ="amountFiveCover.Chamber{{ i }}" value="5">
-                                        <label class="btn btn-success" id="amountChamber5Label" for="amountFiveCover.Chamber{{ i }}">5</label>
+                                        <label class="btn btn-success lol" id="amountChamber5Label" for="amountFiveCover.Chamber{{ i }}">5</label>
                                     </div>
                                 </div>
 
