--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -1,7 +1,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="lib/css/styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -10,7 +11,9 @@
 </head>
 <body>
 <nav class="navbar sticky-top navbar-light bg-light">
-    <a href="http://hhlacleaner.de"><img src="https://upload.wikimedia.org/wikipedia/de/thumb/b/b5/Hhla-logo.svg/1064px-Hhla-logo.svg.png" width="110" height="30" alt=""></a>
+    <a href="http://hhlacleaner.de"><img
+                src="https://upload.wikimedia.org/wikipedia/de/thumb/b/b5/Hhla-logo.svg/1064px-Hhla-logo.svg.png"
+                width="110" height="30" alt=""></a>
     {% block navEntrys %}
 
     {% endblock %}
@@ -18,7 +21,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 mx-auto d-block d-none d-sm-block mt-3">
-        <h{{ headingSize }}>{{ pageHeading }}</h{{ headingSize }}>
+            <h{{ headingSize }}>{{ pageHeading }}</h{{ headingSize }}>
             {% block body %}
                 <form action="chooseBegleitet.php" method="post" class="mt-3">
                     <div class="form-group">
@@ -30,14 +33,19 @@
                         <input required type="password" class="form-control" id="input.Password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn-select form-control btn-success" id="input.Password" value="Submit">
+                        <input type="submit" class="btn-select form-control btn-success" id="input.Password"
+                               value="Submit">
                     </div>
                     <div class="text-right">
-                        <a href="#"><small>{{ transRequestLogin }}</small></a>
+                        <a href="#">
+                            <small>{{ transRequestLogin }}</small>
+                        </a>
                     </div>
                 </form>
                 <div>
-                    <a href="chooseBegleitet.php?guest"><small>{{ transGuest }}</small></a>
+                    <a href="chooseBegleitet.php?guest">
+                        <small>{{ transGuest }}</small>
+                    </a>
                 </div>
             {% endblock %}
             {% block footer %}
@@ -47,11 +55,27 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 <script>
-
+    $(".btn").click((e) => {
+        const className = e.target.className === "btn btn-success lol" ? "btn btn-clicked lol" : "btn btn-success lol";
+        const buttons = $(".lol");
+        for (let key in buttons) {
+            if (buttons.hasOwnProperty(key)) {
+                buttons[key].className = "btn btn-success lol";
+            }
+        }
+        if (Object.values(buttons).indexOf(e.target) > -1) {
+            e.target.className = className;
+        }
+    });
 </script>
 {% block script %}
 {% endblock %}
