--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -19,6 +19,7 @@
     <div class="row">
         <div class="col-md-4 mx-auto d-block d-none d-sm-block mt-3">
         <h{{ headingSize }}>{{ pageHeading }}</h{{ headingSize }}>
+            <hr>
             {% block body %}
                 <form action="chooseBegleitet.php" method="post" class="mt-3">
                     <div class="form-group">
@@ -30,7 +31,7 @@
                         <input required type="password" class="form-control" id="input.Password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn-select form-control btn-success" id="input.Password" value="Submit">
+                        <input type="submit" class="btn-select form-control btn-success" id="input.Password" value="Login">
                     </div>
                     <div class="text-right">
                         <a href="#"><small>{{ transRequestLogin }}</small></a>
