Changes Highlighted Button color

--- a/frontend/lib/css/styles.css
+++ b/frontend/lib/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 .btn-clicked{
-    background-color: #356920 !important;
+    background-color: #005f9b !important;
     border-color: #003a69 !important;
     color: #ffffff !important;
 }
