--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -56,10 +56,10 @@
          </div>
          <div class="form-group mt-4">
              <label class="form-check-label" id="LabelNumberPlate" for="NumberPlate">Number plate</label>
-             <input class="form-control" type="text" name="NumberPlate" id="NumberPlate" placeholder="Numberplate">
+             <input class="form-control" type="text" name="NumberPlate" id="NumberPlate" placeholder="Number plate">
          </div>
          <div class="form-group mt-4">
-             <label class="form-check-label" id="LabelTanknumber" for="Tanknumber">Tanknumber</label>
+             <label class="form-check-label" id="LabelTanknumber" for="Tanknumber">Tanknumsber</label>
              <input class="form-control" type="text" name="Tanknumber" id="Tanknumber" placeholder="XXXU1234567">
          </div>
 
