--- a/frontend/lib/templates/chooseTrailer.twig
+++ b/frontend/lib/templates/chooseTrailer.twig
@@ -7,20 +7,20 @@
             <div class="form-group mt-5">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="20" id="Ttype20">
-                    <label class="form-check-lable" for="Ttype20"><img src="lib/img/truck_20.svg" width="175px"></label>
+                    <label class="form-check-lable" for="Ttype20"><img src="lib/img/truck_20.png" width="175px"></label>
                 </div>
             </div>
             <div class="form-group mt-5">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="Ttype" value="20+20" id="Ttype20b">
-                    <label class="form-check-lable" for="Ttype20b"><img src="lib/img/truck_20_20.svg" width="175px"></label>
+                    <label class="form-check-lable" for="Ttype20b"><img src="lib/img/truck_20_20.png" width="175px"></label>
                 </div>
             </div>
             <div class="form-group mt-5 mb-5">
                 <div class="form-check">
                     <label class="form-check-lable" for="Ttype40">
                     <input class="form-check-input" type="radio" name="Ttype" value="40" id="Ttype40">
-                    <img src="lib/img/truck_40.svg" width="175px"></label>
+                    <img src="lib/img/truck_40.png" width="175px"></label>
                 </div>
             </div>
         </div>
